--- a/app/src/main/res/layout/activity_intro_screen.xml
+++ b/app/src/main/res/layout/activity_intro_screen.xml
@@ -7,7 +7,7 @@
     tools:context=".View.IntroScreen">
 
     <ImageView
-        android:id="@+id/bg2Kitchen"
+        android:id="@+id/bgIntro"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
@@ -17,7 +17,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/bg_bedroom" />
-
 
     <ImageView
         android:id="@+id/darkShade1"
@@ -68,7 +67,7 @@
         android:layout_height="60dp"
         android:padding="0dp"
         android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="@+id/bg2Kitchen"
+        app:layout_constraintBottom_toBottomOf="@+id/bgIntro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.499"
         app:layout_constraintStart_toStartOf="parent"
