--- a/app/src/main/res/layout/activity_page6.xml
+++ b/app/src/main/res/layout/activity_page6.xml
@@ -7,7 +7,7 @@
     tools:context=".View.Page6">
 
     <ImageView
-        android:id="@+id/bg6Bedroom"
+        android:id="@+id/bgPage6"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
@@ -16,13 +16,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/bg_bedroom" />
+        app:srcCompat="@drawable/bg_whitevan" />
 
     <ImageView
         android:id="@+id/darkShade6"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:alpha="0.8"
+        android:alpha="0.5"
         android:src="@drawable/darkshade"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp" />
@@ -39,7 +39,7 @@
         app:layout_constraintBottom_toTopOf="@+id/btn6Choice1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/bg6Bedroom"
+        app:layout_constraintTop_toTopOf="@+id/bgPage6"
         app:layout_constraintVertical_chainStyle="spread" />
 
 
@@ -49,10 +49,10 @@
         android:layout_height="60dp"
         android:padding="0dp"
         android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="@+id/bg6Bedroom"
+        app:layout_constraintBottom_toBottomOf="@+id/bgPage6"
         app:layout_constraintEnd_toStartOf="@+id/btn6Choice2"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/bg6Bedroom"
+        app:layout_constraintStart_toEndOf="@+id/bgPage6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt6Dialogue"
         app:srcCompat="@drawable/btn_unpressed"
@@ -157,7 +157,7 @@
         android:padding="0dp"
         android:scaleType="fitXY"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@+id/bg6Bedroom"
+        app:layout_constraintBottom_toBottomOf="@+id/bgPage6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/btn_unpressed"
