fixed bugs and added SFX

--- a/app/src/main/res/layout/activity_page1.xml
+++ b/app/src/main/res/layout/activity_page1.xml
@@ -148,7 +148,7 @@
         tools:ignore="HardcodedText" />
 
     <ImageView
-        android:id="@+id/btnHome1"
+        android:id="@+id/btn1Home"
         android:layout_width="47dp"
         android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
