--- a/app/src/main/res/layout/activity_page5.xml
+++ b/app/src/main/res/layout/activity_page5.xml
@@ -150,7 +150,7 @@
         tools:ignore="HardcodedText" />
 
     <ImageView
-        android:id="@+id/btnHome5"
+        android:id="@+id/btn5Home"
         android:layout_width="47dp"
         android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
