--- a/app/src/main/res/layout/activity_settings_screen.xml
+++ b/app/src/main/res/layout/activity_settings_screen.xml
@@ -33,25 +33,24 @@
         android:id="@+id/volumeBar"
         android:layout_width="200dp"
         android:layout_height="37dp"
-        android:layout_marginEnd="184dp"
+        android:layout_marginEnd="140dp"
         android:max="100"
         android:progressDrawable="@drawable/seekbar_style"
         android:thumb="@drawable/custom_thumb"
         app:layout_constraintBottom_toTopOf="@+id/brightnessBar"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/settingsBox"
         app:layout_constraintTop_toBottomOf="@+id/txtTitleSettings" />
 
     <SeekBar
         android:id="@+id/brightnessBar"
         android:layout_width="200dp"
         android:layout_height="37dp"
-        android:layout_marginEnd="172dp"
         android:layout_marginBottom="50dp"
         android:max="100"
         android:progressDrawable="@drawable/seekbar_style"
         android:thumb="@drawable/custom_thumb"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/volumeBar"
+        app:layout_constraintEnd_toEndOf="@+id/settingsBox"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/volumeBar"
         app:layout_constraintTop_toBottomOf="@+id/volumeBar" />
@@ -74,8 +73,8 @@
 
     <TextView
         android:id="@+id/txtMusic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="71dp"
+        android:layout_height="25dp"
         android:layout_marginEnd="20dp"
         android:autoSizeTextType="uniform"
         android:fontFamily="@font/nicobold_regular"
@@ -85,7 +84,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/volumeBar"
         app:layout_constraintEnd_toStartOf="@+id/volumeBar"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/settingsBox"
         app:layout_constraintTop_toTopOf="@+id/volumeBar"
         app:layout_constraintVertical_bias="0.529" />
 
@@ -108,8 +107,8 @@
 
     <TextView
         android:id="@+id/txtBrightness"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="123dp"
+        android:layout_height="25dp"
         android:layout_marginEnd="20dp"
         android:autoSizeTextType="uniform"
         android:fontFamily="@font/nicobold_regular"
@@ -119,7 +118,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/brightnessBar"
         app:layout_constraintEnd_toStartOf="@+id/brightnessBar"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/settingsBox"
         app:layout_constraintTop_toTopOf="@+id/brightnessBar"
         app:layout_constraintVertical_bias="0.411" />
 
