added main menu

--- a/app/src/main/res/layout/activity_credits_screen.xml
+++ b/app/src/main/res/layout/activity_credits_screen.xml
@@ -4,18 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
     tools:context=".View.CreditsScreen">
-
-    <ImageView
-        android:id="@+id/bgCredits"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:alpha="0.35"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/bg_bedroom"
-        tools:layout_editor_absoluteX="-16dp"
-        tools:layout_editor_absoluteY="210dp" />
 
     <ImageView
         android:id="@+id/creditsBox"
@@ -24,24 +13,23 @@
         android:src="@drawable/txtbox"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.49" />
 
     <ImageView
         android:id="@+id/btnCreditsBack"
         android:layout_width="59dp"
         android:layout_height="65dp"
-        android:layout_marginStart="108dp"
         android:onClick="back"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintBottom_toBottomOf="@+id/creditsBox"
+        app:layout_constraintEnd_toEndOf="@+id/creditsBox"
+        app:layout_constraintHorizontal_bias="0.185"
         app:layout_constraintStart_toStartOf="@+id/creditsBox"
-        app:layout_constraintTop_toTopOf="@+id/bgCredits"
-        app:layout_constraintVertical_bias="0.22"
+        app:layout_constraintTop_toTopOf="@+id/creditsBox"
+        app:layout_constraintVertical_bias="0.213"
         app:srcCompat="@drawable/btn_back"
         tools:ignore="OnClick" />
 
@@ -55,10 +43,10 @@
         android:text="@string/credits"
         android:textColor="#FFFFFF"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="@+id/bgCredits"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/bgCredits"
-        app:layout_constraintTop_toTopOf="@+id/bgCredits"
+        app:layout_constraintBottom_toBottomOf="@+id/creditsBox"
+        app:layout_constraintEnd_toEndOf="@+id/creditsBox"
+        app:layout_constraintStart_toStartOf="@+id/creditsBox"
+        app:layout_constraintTop_toTopOf="@+id/creditsBox"
         app:layout_constraintVertical_bias="0.502" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
