--- a/app/src/main/res/layout/activity_page1.xml
+++ b/app/src/main/res/layout/activity_page1.xml
@@ -148,7 +148,7 @@
         tools:ignore="HardcodedText" />
 
     <ImageView
-        android:id="@+id/btn1Home"
+        android:id="@+id/btn1Pause"
         android:layout_width="47dp"
         android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -157,7 +157,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.051"
-        app:srcCompat="@drawable/btn_home" />
+        app:srcCompat="@drawable/btn_menu" />
 
     <ImageButton
         android:id="@+id/btn1Restart"
