--- a/app/src/main/res/layout/activity_page7.xml
+++ b/app/src/main/res/layout/activity_page7.xml
@@ -149,7 +149,7 @@
         tools:ignore="HardcodedText" />
 
   <ImageView
-      android:id="@+id/btn7Home"
+      android:id="@+id/btn7Menu"
       android:layout_width="47dp"
       android:layout_height="50dp"
       app:layout_constraintBottom_toBottomOf="parent"
@@ -158,7 +158,7 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.051"
-      app:srcCompat="@drawable/btn_home" />
+      app:srcCompat="@drawable/btn_menu" />
 
   <VideoView
       android:id="@+id/death7"
