--- a/app/src/main/res/layout/activity_settings_screen.xml
+++ b/app/src/main/res/layout/activity_settings_screen.xml
@@ -4,18 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
     tools:context=".View.SettingsScreen">
-
-    <ImageView
-        android:id="@+id/bgSettings"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:alpha="0.35"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/bg_bedroom"
-        tools:layout_editor_absoluteX="-16dp"
-        tools:layout_editor_absoluteY="210dp" />
 
     <ImageView
         android:id="@+id/settingsBox"
@@ -24,10 +13,10 @@
         android:src="@drawable/txtbox"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.49" />
 
     <SeekBar
         android:id="@+id/volumeBar"
@@ -49,7 +38,7 @@
         android:max="100"
         android:progressDrawable="@drawable/seekbar_style"
         android:thumb="@drawable/custom_thumb"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/settingsBox"
         app:layout_constraintEnd_toEndOf="@+id/settingsBox"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/volumeBar"
@@ -59,14 +48,13 @@
         android:id="@+id/btnSettingsBack"
         android:layout_width="59dp"
         android:layout_height="65dp"
-        android:layout_marginStart="108dp"
-        android:onClick="back"
+        android:onClick="goBack"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintBottom_toBottomOf="@+id/settingsBox"
+        app:layout_constraintEnd_toEndOf="@+id/settingsBox"
+        app:layout_constraintHorizontal_bias="0.183"
         app:layout_constraintStart_toStartOf="@+id/settingsBox"
-        app:layout_constraintTop_toTopOf="@+id/bgSettings"
+        app:layout_constraintTop_toTopOf="@+id/settingsBox"
         app:layout_constraintVertical_bias="0.22"
         app:srcCompat="@drawable/btn_back"
         tools:ignore="OnClick" />
@@ -92,7 +80,7 @@
         android:id="@+id/txtTitleSettings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:autoSizeTextType="uniform"
         android:fontFamily="@font/nicobold_regular"
         android:text="Settings"
@@ -100,8 +88,9 @@
         android:textSize="35sp"
         app:layout_constraintBottom_toTopOf="@+id/volumeBar"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.499"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/settingsBox"
         app:layout_constraintVertical_bias="0.151"
         app:layout_constraintVertical_chainStyle="spread" />
 
